--- a/p4.html
+++ b/p4.html
@@ -11,7 +11,7 @@
 <br><br><br>
 
 <div>
-<button id="button" onclick="window.location.href='projects.html';">Return to Projects
+<button id="button" onclick="window.location.href='Projects.html';">Return to Projects
 </button>
 </div>
 <br><br><br>
