--- a/p2.html
+++ b/p2.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bubble 2 - Shuffleboard</title>
-    <link rel="stylesheet" href="p1styles.css">
+    <link rel="stylesheet" href="p2styles.css">
 
 </head>
-<p class="returnLink"><a href="Projects.html">Return</a></p><br>
-<body id="p1body">
+
+<br><br><br>
+
+<div>
+<button id="button" onclick="window.location.href='Projects.html';">Return to Projects
+</button>
+</div>
+<br><br><br>
+
+<body>
     
     <h1>The Shuffleboard Team Page</h1>
     <p>When I joined bswift, the company was well-established but maintained its start-up spirit. This meant the role required a lot of hands-on, learn-by-doing experiences, which I loved! One of the most fun aspects was learning and deploying basic HTML for displaying information on the benefits site. This experience piqued my interest in HTML and front-end development. During my time away, I spent a couple of weeks speeding through Meta's courses on Coursera and practiced by creating the page linked below.</p> 
