--- a/p2gallery.html
+++ b/p2gallery.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Shuffle N' Flow Gallery</title>
-        <link rel="stylesheet" href="p2styles.css">
+        <link rel="stylesheet" href="p2shufflestyles.css">
     </head>
 
 
