--- a/p5modeler.html
+++ b/p5modeler.html
@@ -21,18 +21,21 @@
 <body>
     <div class="container">
 
-        <h1>ACA Reporting Tool</h1>
+        <h1>ACA Reporting Decision Tree     <img src = "p5images/tree.jpg" alt="tree" height = "80px"></h1>
         <div id="question-container">
             
-            <p id="question-text">Welcome! Click "Start" to begin.</p>
+            <p id="question-text">Click "Start" to begin.</p>
             <br><br>
             <b><div id="options"></div></b>
             <button id="start-btn" onclick="startDecision()">Start</button>
+            
+
         </div>
         <br><br><br><br>
         <div class="nav-buttons">
             <button id="prev-btn" onclick="goBack()" disabled>Previous</button>
             <button id="next-btn" onclick="goNext()" disabled>Next</button>
+            <button id="restart-btn" onclick="restart()" style="display: none;">Start Over</button>
         </div>
     </div>
 
