--- a/p5modeler.html
+++ b/p5modeler.html
@@ -24,7 +24,7 @@
         <h1>ACA Reporting Decision Tree     <img src = "p5images/tree.jpg" alt="tree" height = "80px"></h1>
         <div id="question-container">
             
-            <p id="question-text">Click "Start" to begin.</p>
+            <p id="question-text">Welcome! Click "Start" to begin.</p>
             <br><br>
             <b><div id="options"></div></b>
             <button id="start-btn" onclick="startDecision()">Start</button>
@@ -34,11 +34,12 @@
         <br><br><br><br>
         <div class="nav-buttons">
             <button id="prev-btn" onclick="goBack()" disabled>Previous</button>
-            
+            <button id="next-btn" onclick="goNext()" disabled>Next</button>
             <button id="restart-btn" onclick="restart()" style="display: none;">Start Over</button>
         </div>
     </div>
 
     <script src="p5script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </body>
 </html>
