--- a/p3.html
+++ b/p3.html
@@ -22,21 +22,28 @@
     <p>Since leaving bswift, I found myself with some extra time to explore new hobbies. One day, my friend Marcus randomly asked whether I wanted to borrow his 3D printer. "Heck yeah!" I said. He dropped off this large, boxy machine that didn't look easy to use. He said I would figure it out.</p>
     <p>This thing terrified me at first. Bed height and leveling, extrusion, temperature--all aspects I knew nothing about. I started by downloading someone else's design for a vase. It was really cool watching the printer build the model from bottom-up over the course of 5 or so hours. However, at that point, I noticed it was printing a solid object and not the hollowed version for inserting flowers. That's when I went down a rabbit hole of research into various print settings for a hollowed object. In the end, it was as simple as adjusting the Infill to 0 and thickening the Walls.</p>
     <p>The vase turned out great! I only had to stop it before it reached full height since I was heading to Palm Springs for a vacation.</p>
-            <div id ="vaseImage"><img src="p3images/3D1.jpg" alt="Vase Image" onclick="openModal(this)">
+        <div class = "vase-container">    
+            <div id ="image"><img src="p3images/3D1.jpg" alt="Vase Image" onclick="openModal(this)">
                 <div id="imageModal" class="modal" onclick="closeModal()">
                 <img id="modalImage" class="modal-content">
                 </div>
             </div> 
+            <div id ="image"><img src="p3images/3D4.jpg" alt="Dice Image" onclick="openModal(this)">
+                <div id="imageModal" class="modal" onclick="closeModal()">
+                <img id="modalImage" class="modal-content">
+                </div>
+            </div> 
+        </div>
     <p>I found that printing pre-designed objects was super easy once I had downloaded the appropriate software. But what I really wanted to learn was how to create my own designs. I found an easy-ish CAD program where I could use various shapes to add/erase, and adjust positioning, angles, and height. It took several days of practice, but I finally go the hang of it.</p>
     <p>I started with designing some dice for games. Easy peasy. I next moved onto designing an object to help keep our dryer door from swinging shut and hitting us in the head (very annoying). Works well, but it is a little ugly.</p>
     <p>And most recently, I designed this little remote-control holder shaped like a turtle because Laura likes turtles.</p>
         <div class = "turtle-container">
-            <div id="turtle-images"><img src="p3images/3D2.jpg" alt="Turtle Image 1" onclick="openModal(this)">
+            <div id="image"><img src="p3images/3D2.jpg" alt="Turtle Image 1" onclick="openModal(this)">
                 <div id="imageModal" class="modal" onclick="closeModal()">
                 <img id="modalImage" class="modal-content">
                 </div>
             </div>
-            <div id="turtle-images"><img src="p3images/3D3.jpg" alt="Turtle Image 2" onclick="openModal(this)">
+            <div id="image"><img src="p3images/3D3.jpg" alt="Turtle Image 2" onclick="openModal(this)">
                 <div id="imageModal" class="modal" onclick="closeModal()">
                 <img id="modalImage" class="modal-content">
                 </div>
@@ -45,7 +52,7 @@
     <p>I love tinkering around with design and printing objects. It just takes a lot of time, so I have to be very deliberate in my attempts. Overall, it has been a fun journey, and I'm happy to have acquired some new skills!</p>
     </div>
 
-    <div id ="vaseImage"><img src="p3images/toothbrush.png" alt="Toothbrush Holder Image" onclick="openModal(this)">
+    <div id ="image"><img src="p3images/toothbrush.png" alt="Toothbrush Holder Image" onclick="openModal(this)">
         <div id="imageModal" class="modal" onclick="closeModal()">
         <img id="modalImage" class="modal-content">
         </div>
