--- a/p1.html
+++ b/p1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bubble 1 - Google Sheet</title>
+    <title>Project 1 - Enrollment Kit</title>
     <link rel="stylesheet" href="p1styles.css">
 
 </head>
