--- a/p5.html
+++ b/p5.html
@@ -20,15 +20,19 @@
 
 
 <body>
+
+    
     <!-- Cover Page -->
     <div id="cover" class="screen active">
-        <h1>The Black Spot</h1>
-        <img src="cover-image.jpg" alt="Mysterious black spot">
-        <p>By Jonathan Eng</p>
-        <button onclick="startBook()">Begin</button>
+        <h1>Coming Soon...</h1>
+      <!--   <img src="cover-image.jpg" alt="Mysterious black spot">
+      <p>By Jonathan Eng</p>
+        <button onclick="startBook()">Begin</button>-->
     </div>
 
     <!-- Story Pages -->
+
+    <!-- 
     <div id="book">
         <div id="screen" class="screen">
             <div class="frame" id="frame1"><img id="image1" src="" alt="Story image"></div>
@@ -41,7 +45,7 @@
         </div>
 
     </div>
-
+-->
     <script src="p5script.js"></script>
 </body>
 </html>
