--- a/p3.html
+++ b/p3.html
@@ -21,11 +21,11 @@
     <h1>The Shuffleboard Team Page</h1>
     <p>When I joined bswift, the company was well-established but maintained its start-up spirit. This meant the role required a lot of hands-on, learn-by-doing experiences, which I loved! One of the most fun aspects was learning and deploying basic HTML for displaying information on the benefits site. This experience piqued my interest in HTML and front-end development. During my time away, I spent a couple of weeks speeding through Meta's courses on Coursera and practiced by creating the page linked below.</p> 
     <p id="question"><b>But why shuffleboard, you ask?</b></p>
-    <p>My partner, Laura, introduced me to shuffleboard several months ago. Yes, it's that game that typically older folks play on the decks of cruise ships. At first, I thought the goal was just to slide the "biscuits" into the point areas to score as many points as possible. What I learned after playing several matches was that this is actually a much deeper strategic experience, kind of like Chess. An opponent can easily knock off one of your scored biscuits, so you instead need to find ways of hiding behind other biscuits. It's adult Hide N' Seek!</p> 
+    <p>My partner, Laura, introduced me to shuffleboard several months ago. Yes, it's that game people play on the decks of cruise ships. At first, I thought the goal was just to slide the "biscuits" into the point areas to score as many points as possible. What I learned after playing several matches was that this is actually a much deeper strategic experience, kind of like Chess. An opponent can easily knock off one of your scored biscuits, so you instead need to find ways of hiding behind other biscuits. It's adult Hide N' Seek!</p> 
     <p>Me being a thinker, this game immediately grabbed my attention, so naturally, I began my coding practice by building a page for our league team.</p>
     <p>The page is fully designed from scratch--no WordPress or other modularized site used. I constructed it with my own code, along with some AI editing assistance. I'm really proud of this start and would love to improve upon it once I have some ideas and more experience. <b><u>I'm still new!</u></b> Some things to notice:</p>
     <ul>
-        <li>I added a fun background song. Hopefully it plays!</li>
+        <li>I added a catchy background song. Hopefully it plays!</li>
         <li>I created a slide-in title and all of the buttons. These seem like small things, but they required lots of styling.</li>
         <li>The home page includes a Question of the Day box which cycles through some shuffleboard trivia I Googled.</li>
         <li>There are embedded links to separate HTML pages, including Team Bios. Note: not all team members are represented (yet).</li>
