--- a/p2.html
+++ b/p2.html
@@ -30,8 +30,12 @@
     <img src="p2images/1095c.png" alt="1095-C Form">
     <p><b>Background:</b></p>
     <p>The Affordable Care Act signed into law in 2010 was intended to ensure everyone had access to health insurance at a reasonable price. Of its many components, there were two specific mandates I will address here:</p>
-    <p><b>Individual Mandate:</b> The Individual Mandate required that each individual have health insurance or be subject to a penalty enforced by the IRS. This penalty no longer applies at the Federal level. </p>
-    <p><b>Employer Mandate:</b> The Employer Mandate required that large employers subsidize health insurance for full-time employees such that it would be affordable. Large penalties are assessed for non-compliance.</p>
+    
+    <ul>
+    <li><b>Individual Mandate:</b> The Individual Mandate required that each individual have health insurance or be subject to a penalty enforced by the IRS. This penalty no longer applies at the Federal level.</li><br>
+    <li><b>Employer Mandate:</b> The Employer Mandate required that large employers subsidize health insurance for full-time employees such that it would be affordable. Large penalties are assessed for non-compliance.</li>
+    </ul>
+    
     <p>Form 1095-C (and its codes) shows when an offer of coverage was made. In other words, this is your company letting the IRS know that it met the Employer Mandate to offer you coverage at an affordable rate. Additionally, if the company also served as the insurer (they pay the claims), the form will include coverage information in Part III.</p>
     <p>You may receive a separate Form 1095-B showing coverage information in Part IV if your company is not the insurer and another company, such as Aetna, is. This is a way of making sure coverage information comes directly from the insurer and is therefore as accurate as possible.</p>
     <p>Make sense? If you're into this, play with the modeler to learn more!</p>
