--- a/p4.html
+++ b/p4.html
@@ -20,8 +20,8 @@
     <div>
     <h1>My 3D Printing Adventure</h1>
     <p>Since leaving bswift, I found myself with some extra time to explore new hobbies. One day, my friend Marcus randomly asked whether I wanted to borrow his 3D printer. "Heck yeah!" I said. He dropped off this large, boxy machine that didn't look easy to use. He said I would figure it out.</p>
-    <p>This thing terrified me at first. Bed height and leveling, extrusion, temperature--all aspects I knew nothing about. I started by downloading someone else's design for a vase. It was really cool watching the printer build the model from bottom-up over the course of 5 or so hours. However, at that point, I noticed it was printing a solid object and not the hollowed version for inserting flowers. That's when I went down a rabbit hole of research into various print settings for a hollowed object. In the end, it was as simple as adjusting the Infill to 0 and thickening the Walls.</p>
-    <p>The vase turned out great! I only had to stop it before it reached full height since I was heading to Palm Springs for a vacation.</p>
+    <p>This thing terrified me at first. Bed height and leveling, extrusion, temperature--all aspects I knew nothing about. I started by downloading someone else's design for a vase. It was really cool watching the printer build the model from bottom-up over the course of five or so hours. However, at that point, I noticed it was printing a solid object and not the hollowed version for inserting flowers. That's when I went down a rabbit hole of research into various print settings for a hollowed object. In the end, it was as simple as adjusting the Infill to zero and thickening the Walls.</p>
+    <p>The vase turned out great!</p>
         <div class = "vase-container">    
             <div id ="image"><img src="p4images/3D1.jpg" alt="Vase Image" onclick="openModal(this)">
                 <div id="imageModal" class="modal" onclick="closeModal()">
