--- a/p1.html
+++ b/p1.html
@@ -25,8 +25,8 @@
         <li>I didn't want to pay for Microsoft Excel. Google Sheets is free!</li>
         <li>I wanted to stretch my creative legs.</li>
         </ol>
-        <p>Now, this of course doesn't replace more powerful ben admin platforms, but think about how interesting it is that this could be built entirely on a <u>FREE</u> platform. Small businesses need a quick/easy mechanism for recording enrollments? Easy. Other industries needing basic calculations with dependencies and clean interface? No problem!</p>
-        <p>Looking back, this works better when transferred into a web-based experience, but I hadn't learned that at the time. Now that I have taken Meta courses in front-end development, HTML, CSS, and JavaScript, this is absolutely a possibility.</p>
+        <p>Now, this of course doesn't replace more powerful ben admin platforms, but think about how interesting it is that this could be built entirely for free, in just <u>a couple of days</u>. Small businesses need a quick/simple mechanism for recording enrollments? Easy. Other industries needing basic calculations with dependencies and clean interface? No problem!</p>
+        <p>This will work better when transferred into a web-based experience, but as the first creation I tackled, I hadn't yet learned that. Now that I have taken Meta courses in front-end development, HTML, CSS, and JavaScript, this is absolutely a possibility.</p>
         <p>Click the <b></b><u>Expand</u></b> button below to check out my fun little experiment and let me know what you think!</p>
     <br><br>
 
